--- a/Practica-Integradora/src/views/students.handlebars
+++ b/Practica-Integradora/src/views/students.handlebars
@@ -1,4 +1,5 @@
 {{#each students}}
-    <p>{{this.first_name}}</p>
-    <p>{{this.email}}</p>
+    <p>{{this.name}}</p>
+    <p>{{this.lastName}}</p>
+    <p>{{this.age}}</p>
 {{/each}}
